$Id: Changelog.txt,v 1.493 2022/10/21 19:43:28 nanard Exp $

2022/10/21:
  Add option to match rules description with regex

VERSION 2.3.1 : released on 2022/10/16

2022/10/10:
  NFTables : fix for Big Endian. iport was always read as 0

2022/08/06:
  Fixes DeletePCPMap() for "IPv6 pinholes" with netfilter_nftables backend

2022/06/02:
  Fixes "Port Triggering" with OpenBSD 4.7+

2022/05/18:
  improve configure script for cross builds

2022/02/19:
  prefer non-reserved over reserved addresses in getifaddr()
  pf: use external IP for NAT in double NAT setups
  miniupnpd.init.d.script: support nftables

VERSION 2.3.0 : released on 2022/01/23

2021/12/01:
  NFTables : use scripts to create table and chains
  (see https://github.com/miniupnp/miniupnp/pull/584)

2021/11/17:
  NFTables : use the nat chain for inet rules (Sven Auhagen)
  (see https://github.com/miniupnp/miniupnp/pull/562)

VERSION 2.2.3 : released on 2021/08/21

2021/08/18:
  lease file for IPv6 pinholes

2021/08/11:
  Detect Microsoft User-Agent: and force IGDv1 in that case

2021/06/18:
  Fails on config parsing and init errors.
  print errors during init to both syslog and stderr.

2021/05/22:
  dynamically retrieve `uname -r`

VERSION 2.2.2 : released on 2021/05/13

2021/04/22:
  Add SO_REUSEPORT option for SSDP receive sockets

2021/03/31:
  GetExternalIPAddress returns empty string when the External IP address can
    not be retrieved.

2021/02/26:
  iptables_removeall.sh: fix the cleanup of PREROUTING mangle chain

VERSION 2.2.1 : released on 2020/12/20
 (only minor build corrections)

VERSION 2.2.0 : released on 2020/10/31

2020/10/30:
  OpenBSD: portinuse.c compatible with OpenBSD 5.5+

2020/10/26:
  Improve AddAnyPortMapping port selection

2020/10/22:
  netfilter_nft: fix rule-cache update when using the same chain name in
    both tables.

2020/06/20:
  -v/-vv to output more log (LOG_INFO / LOG_DEBUG)
  AddAnyPortMapping() tries all possible ports

2020/06/10: